# Raycast-Renderer

./: CMakeLists.txt  README.md  config.h  main.c
Headers/: AppState.h
Headers/Objects/: Object.h  Player.h  Wall.h
Headers/Systems/: Debugger.h  Physics.h  Raycast.h  Renderer.h  TextureManager.h
Headers/Tools/: Vector2.h
shaders/: Debug.frag.hlsl  Debug.vert.hlsl  Raycast.vert.hlsl  SolidColor.frag.hlsl  triangle.frag.hlsl  triangle.vertex.hlsl
src/Objects/: Object.c  Player.c
src/Systems/: Debugger.c  Physics.c  Raycast.c  Renderer.c  TextureManager.c
src/Tools/: Vector2.c
